// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot renders correctly 	
                color: Active 	
                disabled: false 	
                 1`] = `
<textarea
  class="textarea Active"
  placeholder="Enter your text..."
/>
`;

exports[`Snapshot renders correctly 	
                color: Active 	
                disabled: true 	
                 1`] = `
<textarea
  class="textarea Active"
  disabled=""
  placeholder="Enter your text..."
/>
`;

exports[`Snapshot renders correctly 	
                color: Default 	
                disabled: false 	
                 1`] = `
<textarea
  class="textarea Default"
  placeholder="Enter your text..."
/>
`;

exports[`Snapshot renders correctly 	
                color: Default 	
                disabled: true 	
                 1`] = `
<textarea
  class="textarea Default"
  disabled=""
  placeholder="Enter your text..."
/>
`;

exports[`Snapshot renders correctly 	
                color: Error 	
                disabled: false 	
                 1`] = `
<textarea
  class="textarea Error"
  placeholder="Enter your text..."
/>
`;

exports[`Snapshot renders correctly 	
                color: Error 	
                disabled: true 	
                 1`] = `
<textarea
  class="textarea Error"
  disabled=""
  placeholder="Enter your text..."
/>
`;

exports[`Textarea checks placeholder value 1`] = `
<textarea
  class="textarea Default"
  placeholder="Textarea"
/>
`;

exports[`should render TextArea snapshots correctly 	 text: "", color: Active, hasError: false, disabled: false, hovered: false 1`] = `
<DocumentFragment>
  <div>
    <p
      class="title"
    />
    <textarea
      class="textarea Active"
      placeholder="Textarea"
    />
  </div>
</DocumentFragment>
`;

exports[`should render TextArea snapshots correctly 	 text: "", color: Active, hasError: false, disabled: false, hovered: true 1`] = `
<DocumentFragment>
  <div>
    <p
      class="title"
    />
    <textarea
      class="textarea Active"
      placeholder="Textarea"
    />
  </div>
</DocumentFragment>
`;

exports[`should render TextArea snapshots correctly 	 text: "", color: Active, hasError: false, disabled: true, hovered: false 1`] = `
<DocumentFragment>
  <div>
    <p
      class="title"
    />
    <textarea
      class="textarea Active"
      disabled=""
      placeholder="Textarea"
    />
  </div>
</DocumentFragment>
`;

exports[`should render TextArea snapshots correctly 	 text: "", color: Active, hasError: false, disabled: true, hovered: true 1`] = `
<DocumentFragment>
  <div>
    <p
      class="title"
    />
    <textarea
      class="textarea Active"
      disabled=""
      placeholder="Textarea"
    />
  </div>
</DocumentFragment>
`;

exports[`should render TextArea snapshots correctly 	 text: "", color: Active, hasError: true, disabled: false, hovered: false 1`] = `
<DocumentFragment>
  <div>
    <p
      class="title"
    />
    <textarea
      class="textarea Active"
      placeholder="Textarea"
    />
    <p
      class="error_message"
    >
      Error text
    </p>
  </div>
</DocumentFragment>
`;

exports[`should render TextArea snapshots correctly 	 text: "", color: Active, hasError: true, disabled: false, hovered: true 1`] = `
<DocumentFragment>
  <div>
    <p
      class="title"
    />
    <textarea
      class="textarea Active"
      placeholder="Textarea"
    />
    <p
      class="error_message"
    >
      Error text
    </p>
  </div>
</DocumentFragment>
`;

exports[`should render TextArea snapshots correctly 	 text: "", color: Active, hasError: true, disabled: true, hovered: false 1`] = `
<DocumentFragment>
  <div>
    <p
      class="title"
    />
    <textarea
      class="textarea Active"
      disabled=""
      placeholder="Textarea"
    />
    <p
      class="error_message"
    >
      Error text
    </p>
  </div>
</DocumentFragment>
`;

exports[`should render TextArea snapshots correctly 	 text: "", color: Active, hasError: true, disabled: true, hovered: true 1`] = `
<DocumentFragment>
  <div>
    <p
      class="title"
    />
    <textarea
      class="textarea Active"
      disabled=""
      placeholder="Textarea"
    />
    <p
      class="error_message"
    >
      Error text
    </p>
  </div>
</DocumentFragment>
`;

exports[`should render TextArea snapshots correctly 	 text: "", color: Default, hasError: false, disabled: false, hovered: false 1`] = `
<DocumentFragment>
  <div>
    <p
      class="title"
    />
    <textarea
      class="textarea Default"
      placeholder="Textarea"
    />
  </div>
</DocumentFragment>
`;

exports[`should render TextArea snapshots correctly 	 text: "", color: Default, hasError: false, disabled: false, hovered: true 1`] = `
<DocumentFragment>
  <div>
    <p
      class="title"
    />
    <textarea
      class="textarea Default Active"
      placeholder="Textarea"
    />
  </div>
</DocumentFragment>
`;

exports[`should render TextArea snapshots correctly 	 text: "", color: Default, hasError: false, disabled: true, hovered: false 1`] = `
<DocumentFragment>
  <div>
    <p
      class="title"
    />
    <textarea
      class="textarea Default"
      disabled=""
      placeholder="Textarea"
    />
  </div>
</DocumentFragment>
`;

exports[`should render TextArea snapshots correctly 	 text: "", color: Default, hasError: false, disabled: true, hovered: true 1`] = `
<DocumentFragment>
  <div>
    <p
      class="title"
    />
    <textarea
      class="textarea Default Active"
      disabled=""
      placeholder="Textarea"
    />
  </div>
</DocumentFragment>
`;

exports[`should render TextArea snapshots correctly 	 text: "", color: Default, hasError: true, disabled: false, hovered: false 1`] = `
<DocumentFragment>
  <div>
    <p
      class="title"
    />
    <textarea
      class="textarea Default"
      placeholder="Textarea"
    />
    <p
      class="error_message"
    >
      Error text
    </p>
  </div>
</DocumentFragment>
`;

exports[`should render TextArea snapshots correctly 	 text: "", color: Default, hasError: true, disabled: false, hovered: true 1`] = `
<DocumentFragment>
  <div>
    <p
      class="title"
    />
    <textarea
      class="textarea Default Active"
      placeholder="Textarea"
    />
    <p
      class="error_message"
    >
      Error text
    </p>
  </div>
</DocumentFragment>
`;

exports[`should render TextArea snapshots correctly 	 text: "", color: Default, hasError: true, disabled: true, hovered: false 1`] = `
<DocumentFragment>
  <div>
    <p
      class="title"
    />
    <textarea
      class="textarea Default"
      disabled=""
      placeholder="Textarea"
    />
    <p
      class="error_message"
    >
      Error text
    </p>
  </div>
</DocumentFragment>
`;

exports[`should render TextArea snapshots correctly 	 text: "", color: Default, hasError: true, disabled: true, hovered: true 1`] = `
<DocumentFragment>
  <div>
    <p
      class="title"
    />
    <textarea
      class="textarea Default Active"
      disabled=""
      placeholder="Textarea"
    />
    <p
      class="error_message"
    >
      Error text
    </p>
  </div>
</DocumentFragment>
`;

exports[`should render TextArea snapshots correctly 	 text: "", color: Error, hasError: false, disabled: false, hovered: false 1`] = `
<DocumentFragment>
  <div>
    <p
      class="title"
    />
    <textarea
      class="textarea Error"
      placeholder="Textarea"
    />
  </div>
</DocumentFragment>
`;

exports[`should render TextArea snapshots correctly 	 text: "", color: Error, hasError: false, disabled: false, hovered: true 1`] = `
<DocumentFragment>
  <div>
    <p
      class="title"
    />
    <textarea
      class="textarea Active Error"
      placeholder="Textarea"
    />
  </div>
</DocumentFragment>
`;

exports[`should render TextArea snapshots correctly 	 text: "", color: Error, hasError: false, disabled: true, hovered: false 1`] = `
<DocumentFragment>
  <div>
    <p
      class="title"
    />
    <textarea
      class="textarea Error"
      disabled=""
      placeholder="Textarea"
    />
  </div>
</DocumentFragment>
`;

exports[`should render TextArea snapshots correctly 	 text: "", color: Error, hasError: false, disabled: true, hovered: true 1`] = `
<DocumentFragment>
  <div>
    <p
      class="title"
    />
    <textarea
      class="textarea Active Error"
      disabled=""
      placeholder="Textarea"
    />
  </div>
</DocumentFragment>
`;

exports[`should render TextArea snapshots correctly 	 text: "", color: Error, hasError: true, disabled: false, hovered: false 1`] = `
<DocumentFragment>
  <div>
    <p
      class="title"
    />
    <textarea
      class="textarea Error"
      placeholder="Textarea"
    />
    <p
      class="error_message"
    >
      Error text
    </p>
  </div>
</DocumentFragment>
`;

exports[`should render TextArea snapshots correctly 	 text: "", color: Error, hasError: true, disabled: false, hovered: true 1`] = `
<DocumentFragment>
  <div>
    <p
      class="title"
    />
    <textarea
      class="textarea Active Error"
      placeholder="Textarea"
    />
    <p
      class="error_message"
    >
      Error text
    </p>
  </div>
</DocumentFragment>
`;

exports[`should render TextArea snapshots correctly 	 text: "", color: Error, hasError: true, disabled: true, hovered: false 1`] = `
<DocumentFragment>
  <div>
    <p
      class="title"
    />
    <textarea
      class="textarea Error"
      disabled=""
      placeholder="Textarea"
    />
    <p
      class="error_message"
    >
      Error text
    </p>
  </div>
</DocumentFragment>
`;

exports[`should render TextArea snapshots correctly 	 text: "", color: Error, hasError: true, disabled: true, hovered: true 1`] = `
<DocumentFragment>
  <div>
    <p
      class="title"
    />
    <textarea
      class="textarea Active Error"
      disabled=""
      placeholder="Textarea"
    />
    <p
      class="error_message"
    >
      Error text
    </p>
  </div>
</DocumentFragment>
`;

exports[`should render TextArea snapshots correctly 	 text: "Custom placeholder", color: Active, hasError: false, disabled: false, hovered: false 1`] = `
<DocumentFragment>
  <div>
    <p
      class="title"
    />
    <textarea
      class="textarea Active"
      placeholder="Textarea"
    >
      Custom placeholder
    </textarea>
  </div>
</DocumentFragment>
`;

exports[`should render TextArea snapshots correctly 	 text: "Custom placeholder", color: Active, hasError: false, disabled: false, hovered: true 1`] = `
<DocumentFragment>
  <div>
    <p
      class="title"
    />
    <textarea
      class="textarea Active"
      placeholder="Textarea"
    >
      Custom placeholder
    </textarea>
  </div>
</DocumentFragment>
`;

exports[`should render TextArea snapshots correctly 	 text: "Custom placeholder", color: Active, hasError: false, disabled: true, hovered: false 1`] = `
<DocumentFragment>
  <div>
    <p
      class="title"
    />
    <textarea
      class="textarea Active"
      disabled=""
      placeholder="Textarea"
    >
      Custom placeholder
    </textarea>
  </div>
</DocumentFragment>
`;

exports[`should render TextArea snapshots correctly 	 text: "Custom placeholder", color: Active, hasError: false, disabled: true, hovered: true 1`] = `
<DocumentFragment>
  <div>
    <p
      class="title"
    />
    <textarea
      class="textarea Active"
      disabled=""
      placeholder="Textarea"
    >
      Custom placeholder
    </textarea>
  </div>
</DocumentFragment>
`;

exports[`should render TextArea snapshots correctly 	 text: "Custom placeholder", color: Active, hasError: true, disabled: false, hovered: false 1`] = `
<DocumentFragment>
  <div>
    <p
      class="title"
    />
    <textarea
      class="textarea Active"
      placeholder="Textarea"
    >
      Custom placeholder
    </textarea>
    <p
      class="error_message"
    >
      Error text
    </p>
  </div>
</DocumentFragment>
`;

exports[`should render TextArea snapshots correctly 	 text: "Custom placeholder", color: Active, hasError: true, disabled: false, hovered: true 1`] = `
<DocumentFragment>
  <div>
    <p
      class="title"
    />
    <textarea
      class="textarea Active"
      placeholder="Textarea"
    >
      Custom placeholder
    </textarea>
    <p
      class="error_message"
    >
      Error text
    </p>
  </div>
</DocumentFragment>
`;

exports[`should render TextArea snapshots correctly 	 text: "Custom placeholder", color: Active, hasError: true, disabled: true, hovered: false 1`] = `
<DocumentFragment>
  <div>
    <p
      class="title"
    />
    <textarea
      class="textarea Active"
      disabled=""
      placeholder="Textarea"
    >
      Custom placeholder
    </textarea>
    <p
      class="error_message"
    >
      Error text
    </p>
  </div>
</DocumentFragment>
`;

exports[`should render TextArea snapshots correctly 	 text: "Custom placeholder", color: Active, hasError: true, disabled: true, hovered: true 1`] = `
<DocumentFragment>
  <div>
    <p
      class="title"
    />
    <textarea
      class="textarea Active"
      disabled=""
      placeholder="Textarea"
    >
      Custom placeholder
    </textarea>
    <p
      class="error_message"
    >
      Error text
    </p>
  </div>
</DocumentFragment>
`;

exports[`should render TextArea snapshots correctly 	 text: "Custom placeholder", color: Default, hasError: false, disabled: false, hovered: false 1`] = `
<DocumentFragment>
  <div>
    <p
      class="title"
    />
    <textarea
      class="textarea Default"
      placeholder="Textarea"
    >
      Custom placeholder
    </textarea>
  </div>
</DocumentFragment>
`;

exports[`should render TextArea snapshots correctly 	 text: "Custom placeholder", color: Default, hasError: false, disabled: false, hovered: true 1`] = `
<DocumentFragment>
  <div>
    <p
      class="title"
    />
    <textarea
      class="textarea Default Active"
      placeholder="Textarea"
    >
      Custom placeholder
    </textarea>
  </div>
</DocumentFragment>
`;

exports[`should render TextArea snapshots correctly 	 text: "Custom placeholder", color: Default, hasError: false, disabled: true, hovered: false 1`] = `
<DocumentFragment>
  <div>
    <p
      class="title"
    />
    <textarea
      class="textarea Default"
      disabled=""
      placeholder="Textarea"
    >
      Custom placeholder
    </textarea>
  </div>
</DocumentFragment>
`;

exports[`should render TextArea snapshots correctly 	 text: "Custom placeholder", color: Default, hasError: false, disabled: true, hovered: true 1`] = `
<DocumentFragment>
  <div>
    <p
      class="title"
    />
    <textarea
      class="textarea Default Active"
      disabled=""
      placeholder="Textarea"
    >
      Custom placeholder
    </textarea>
  </div>
</DocumentFragment>
`;

exports[`should render TextArea snapshots correctly 	 text: "Custom placeholder", color: Default, hasError: true, disabled: false, hovered: false 1`] = `
<DocumentFragment>
  <div>
    <p
      class="title"
    />
    <textarea
      class="textarea Default"
      placeholder="Textarea"
    >
      Custom placeholder
    </textarea>
    <p
      class="error_message"
    >
      Error text
    </p>
  </div>
</DocumentFragment>
`;

exports[`should render TextArea snapshots correctly 	 text: "Custom placeholder", color: Default, hasError: true, disabled: false, hovered: true 1`] = `
<DocumentFragment>
  <div>
    <p
      class="title"
    />
    <textarea
      class="textarea Default Active"
      placeholder="Textarea"
    >
      Custom placeholder
    </textarea>
    <p
      class="error_message"
    >
      Error text
    </p>
  </div>
</DocumentFragment>
`;

exports[`should render TextArea snapshots correctly 	 text: "Custom placeholder", color: Default, hasError: true, disabled: true, hovered: false 1`] = `
<DocumentFragment>
  <div>
    <p
      class="title"
    />
    <textarea
      class="textarea Default"
      disabled=""
      placeholder="Textarea"
    >
      Custom placeholder
    </textarea>
    <p
      class="error_message"
    >
      Error text
    </p>
  </div>
</DocumentFragment>
`;

exports[`should render TextArea snapshots correctly 	 text: "Custom placeholder", color: Default, hasError: true, disabled: true, hovered: true 1`] = `
<DocumentFragment>
  <div>
    <p
      class="title"
    />
    <textarea
      class="textarea Default Active"
      disabled=""
      placeholder="Textarea"
    >
      Custom placeholder
    </textarea>
    <p
      class="error_message"
    >
      Error text
    </p>
  </div>
</DocumentFragment>
`;

exports[`should render TextArea snapshots correctly 	 text: "Custom placeholder", color: Error, hasError: false, disabled: false, hovered: false 1`] = `
<DocumentFragment>
  <div>
    <p
      class="title"
    />
    <textarea
      class="textarea Error"
      placeholder="Textarea"
    >
      Custom placeholder
    </textarea>
  </div>
</DocumentFragment>
`;

exports[`should render TextArea snapshots correctly 	 text: "Custom placeholder", color: Error, hasError: false, disabled: false, hovered: true 1`] = `
<DocumentFragment>
  <div>
    <p
      class="title"
    />
    <textarea
      class="textarea Active Error"
      placeholder="Textarea"
    >
      Custom placeholder
    </textarea>
  </div>
</DocumentFragment>
`;

exports[`should render TextArea snapshots correctly 	 text: "Custom placeholder", color: Error, hasError: false, disabled: true, hovered: false 1`] = `
<DocumentFragment>
  <div>
    <p
      class="title"
    />
    <textarea
      class="textarea Error"
      disabled=""
      placeholder="Textarea"
    >
      Custom placeholder
    </textarea>
  </div>
</DocumentFragment>
`;

exports[`should render TextArea snapshots correctly 	 text: "Custom placeholder", color: Error, hasError: false, disabled: true, hovered: true 1`] = `
<DocumentFragment>
  <div>
    <p
      class="title"
    />
    <textarea
      class="textarea Active Error"
      disabled=""
      placeholder="Textarea"
    >
      Custom placeholder
    </textarea>
  </div>
</DocumentFragment>
`;

exports[`should render TextArea snapshots correctly 	 text: "Custom placeholder", color: Error, hasError: true, disabled: false, hovered: false 1`] = `
<DocumentFragment>
  <div>
    <p
      class="title"
    />
    <textarea
      class="textarea Error"
      placeholder="Textarea"
    >
      Custom placeholder
    </textarea>
    <p
      class="error_message"
    >
      Error text
    </p>
  </div>
</DocumentFragment>
`;

exports[`should render TextArea snapshots correctly 	 text: "Custom placeholder", color: Error, hasError: true, disabled: false, hovered: true 1`] = `
<DocumentFragment>
  <div>
    <p
      class="title"
    />
    <textarea
      class="textarea Active Error"
      placeholder="Textarea"
    >
      Custom placeholder
    </textarea>
    <p
      class="error_message"
    >
      Error text
    </p>
  </div>
</DocumentFragment>
`;

exports[`should render TextArea snapshots correctly 	 text: "Custom placeholder", color: Error, hasError: true, disabled: true, hovered: false 1`] = `
<DocumentFragment>
  <div>
    <p
      class="title"
    />
    <textarea
      class="textarea Error"
      disabled=""
      placeholder="Textarea"
    >
      Custom placeholder
    </textarea>
    <p
      class="error_message"
    >
      Error text
    </p>
  </div>
</DocumentFragment>
`;

exports[`should render TextArea snapshots correctly 	 text: "Custom placeholder", color: Error, hasError: true, disabled: true, hovered: true 1`] = `
<DocumentFragment>
  <div>
    <p
      class="title"
    />
    <textarea
      class="textarea Active Error"
      disabled=""
      placeholder="Textarea"
    >
      Custom placeholder
    </textarea>
    <p
      class="error_message"
    >
      Error text
    </p>
  </div>
</DocumentFragment>
`;

exports[`should render TextArea snapshots correctly 	 text: "Some text", color: Active, hasError: false, disabled: false, hovered: false 1`] = `
<DocumentFragment>
  <div>
    <p
      class="title"
    />
    <textarea
      class="textarea Active"
      placeholder="Textarea"
    >
      Some text
    </textarea>
  </div>
</DocumentFragment>
`;

exports[`should render TextArea snapshots correctly 	 text: "Some text", color: Active, hasError: false, disabled: false, hovered: true 1`] = `
<DocumentFragment>
  <div>
    <p
      class="title"
    />
    <textarea
      class="textarea Active"
      placeholder="Textarea"
    >
      Some text
    </textarea>
  </div>
</DocumentFragment>
`;

exports[`should render TextArea snapshots correctly 	 text: "Some text", color: Active, hasError: false, disabled: true, hovered: false 1`] = `
<DocumentFragment>
  <div>
    <p
      class="title"
    />
    <textarea
      class="textarea Active"
      disabled=""
      placeholder="Textarea"
    >
      Some text
    </textarea>
  </div>
</DocumentFragment>
`;

exports[`should render TextArea snapshots correctly 	 text: "Some text", color: Active, hasError: false, disabled: true, hovered: true 1`] = `
<DocumentFragment>
  <div>
    <p
      class="title"
    />
    <textarea
      class="textarea Active"
      disabled=""
      placeholder="Textarea"
    >
      Some text
    </textarea>
  </div>
</DocumentFragment>
`;

exports[`should render TextArea snapshots correctly 	 text: "Some text", color: Active, hasError: true, disabled: false, hovered: false 1`] = `
<DocumentFragment>
  <div>
    <p
      class="title"
    />
    <textarea
      class="textarea Active"
      placeholder="Textarea"
    >
      Some text
    </textarea>
    <p
      class="error_message"
    >
      Error text
    </p>
  </div>
</DocumentFragment>
`;

exports[`should render TextArea snapshots correctly 	 text: "Some text", color: Active, hasError: true, disabled: false, hovered: true 1`] = `
<DocumentFragment>
  <div>
    <p
      class="title"
    />
    <textarea
      class="textarea Active"
      placeholder="Textarea"
    >
      Some text
    </textarea>
    <p
      class="error_message"
    >
      Error text
    </p>
  </div>
</DocumentFragment>
`;

exports[`should render TextArea snapshots correctly 	 text: "Some text", color: Active, hasError: true, disabled: true, hovered: false 1`] = `
<DocumentFragment>
  <div>
    <p
      class="title"
    />
    <textarea
      class="textarea Active"
      disabled=""
      placeholder="Textarea"
    >
      Some text
    </textarea>
    <p
      class="error_message"
    >
      Error text
    </p>
  </div>
</DocumentFragment>
`;

exports[`should render TextArea snapshots correctly 	 text: "Some text", color: Active, hasError: true, disabled: true, hovered: true 1`] = `
<DocumentFragment>
  <div>
    <p
      class="title"
    />
    <textarea
      class="textarea Active"
      disabled=""
      placeholder="Textarea"
    >
      Some text
    </textarea>
    <p
      class="error_message"
    >
      Error text
    </p>
  </div>
</DocumentFragment>
`;

exports[`should render TextArea snapshots correctly 	 text: "Some text", color: Default, hasError: false, disabled: false, hovered: false 1`] = `
<DocumentFragment>
  <div>
    <p
      class="title"
    />
    <textarea
      class="textarea Default"
      placeholder="Textarea"
    >
      Some text
    </textarea>
  </div>
</DocumentFragment>
`;

exports[`should render TextArea snapshots correctly 	 text: "Some text", color: Default, hasError: false, disabled: false, hovered: true 1`] = `
<DocumentFragment>
  <div>
    <p
      class="title"
    />
    <textarea
      class="textarea Default Active"
      placeholder="Textarea"
    >
      Some text
    </textarea>
  </div>
</DocumentFragment>
`;

exports[`should render TextArea snapshots correctly 	 text: "Some text", color: Default, hasError: false, disabled: true, hovered: false 1`] = `
<DocumentFragment>
  <div>
    <p
      class="title"
    />
    <textarea
      class="textarea Default"
      disabled=""
      placeholder="Textarea"
    >
      Some text
    </textarea>
  </div>
</DocumentFragment>
`;

exports[`should render TextArea snapshots correctly 	 text: "Some text", color: Default, hasError: false, disabled: true, hovered: true 1`] = `
<DocumentFragment>
  <div>
    <p
      class="title"
    />
    <textarea
      class="textarea Default Active"
      disabled=""
      placeholder="Textarea"
    >
      Some text
    </textarea>
  </div>
</DocumentFragment>
`;

exports[`should render TextArea snapshots correctly 	 text: "Some text", color: Default, hasError: true, disabled: false, hovered: false 1`] = `
<DocumentFragment>
  <div>
    <p
      class="title"
    />
    <textarea
      class="textarea Default"
      placeholder="Textarea"
    >
      Some text
    </textarea>
    <p
      class="error_message"
    >
      Error text
    </p>
  </div>
</DocumentFragment>
`;

exports[`should render TextArea snapshots correctly 	 text: "Some text", color: Default, hasError: true, disabled: false, hovered: true 1`] = `
<DocumentFragment>
  <div>
    <p
      class="title"
    />
    <textarea
      class="textarea Default Active"
      placeholder="Textarea"
    >
      Some text
    </textarea>
    <p
      class="error_message"
    >
      Error text
    </p>
  </div>
</DocumentFragment>
`;

exports[`should render TextArea snapshots correctly 	 text: "Some text", color: Default, hasError: true, disabled: true, hovered: false 1`] = `
<DocumentFragment>
  <div>
    <p
      class="title"
    />
    <textarea
      class="textarea Default"
      disabled=""
      placeholder="Textarea"
    >
      Some text
    </textarea>
    <p
      class="error_message"
    >
      Error text
    </p>
  </div>
</DocumentFragment>
`;

exports[`should render TextArea snapshots correctly 	 text: "Some text", color: Default, hasError: true, disabled: true, hovered: true 1`] = `
<DocumentFragment>
  <div>
    <p
      class="title"
    />
    <textarea
      class="textarea Default Active"
      disabled=""
      placeholder="Textarea"
    >
      Some text
    </textarea>
    <p
      class="error_message"
    >
      Error text
    </p>
  </div>
</DocumentFragment>
`;

exports[`should render TextArea snapshots correctly 	 text: "Some text", color: Error, hasError: false, disabled: false, hovered: false 1`] = `
<DocumentFragment>
  <div>
    <p
      class="title"
    />
    <textarea
      class="textarea Error"
      placeholder="Textarea"
    >
      Some text
    </textarea>
  </div>
</DocumentFragment>
`;

exports[`should render TextArea snapshots correctly 	 text: "Some text", color: Error, hasError: false, disabled: false, hovered: true 1`] = `
<DocumentFragment>
  <div>
    <p
      class="title"
    />
    <textarea
      class="textarea Active Error"
      placeholder="Textarea"
    >
      Some text
    </textarea>
  </div>
</DocumentFragment>
`;

exports[`should render TextArea snapshots correctly 	 text: "Some text", color: Error, hasError: false, disabled: true, hovered: false 1`] = `
<DocumentFragment>
  <div>
    <p
      class="title"
    />
    <textarea
      class="textarea Error"
      disabled=""
      placeholder="Textarea"
    >
      Some text
    </textarea>
  </div>
</DocumentFragment>
`;

exports[`should render TextArea snapshots correctly 	 text: "Some text", color: Error, hasError: false, disabled: true, hovered: true 1`] = `
<DocumentFragment>
  <div>
    <p
      class="title"
    />
    <textarea
      class="textarea Active Error"
      disabled=""
      placeholder="Textarea"
    >
      Some text
    </textarea>
  </div>
</DocumentFragment>
`;

exports[`should render TextArea snapshots correctly 	 text: "Some text", color: Error, hasError: true, disabled: false, hovered: false 1`] = `
<DocumentFragment>
  <div>
    <p
      class="title"
    />
    <textarea
      class="textarea Error"
      placeholder="Textarea"
    >
      Some text
    </textarea>
    <p
      class="error_message"
    >
      Error text
    </p>
  </div>
</DocumentFragment>
`;

exports[`should render TextArea snapshots correctly 	 text: "Some text", color: Error, hasError: true, disabled: false, hovered: true 1`] = `
<DocumentFragment>
  <div>
    <p
      class="title"
    />
    <textarea
      class="textarea Active Error"
      placeholder="Textarea"
    >
      Some text
    </textarea>
    <p
      class="error_message"
    >
      Error text
    </p>
  </div>
</DocumentFragment>
`;

exports[`should render TextArea snapshots correctly 	 text: "Some text", color: Error, hasError: true, disabled: true, hovered: false 1`] = `
<DocumentFragment>
  <div>
    <p
      class="title"
    />
    <textarea
      class="textarea Error"
      disabled=""
      placeholder="Textarea"
    >
      Some text
    </textarea>
    <p
      class="error_message"
    >
      Error text
    </p>
  </div>
</DocumentFragment>
`;

exports[`should render TextArea snapshots correctly 	 text: "Some text", color: Error, hasError: true, disabled: true, hovered: true 1`] = `
<DocumentFragment>
  <div>
    <p
      class="title"
    />
    <textarea
      class="textarea Active Error"
      disabled=""
      placeholder="Textarea"
    >
      Some text
    </textarea>
    <p
      class="error_message"
    >
      Error text
    </p>
  </div>
</DocumentFragment>
`;
